# AcademicCommons

./: .dockerignore  .env.example  .gitignore  Makefile  RAILWAY_SUPABASE_DEPLOY.md  README.md  deployment.md  docker-compose.yml  opencode.json  requirements.txt
src/backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 20260602_0001_initial_schema.py  20260603_0001_add_mock_test_run_id.py  20260621_0001_embedding_dim_1024.py  20260623_0001_add_notifications_table.py  20260702_0001_add_document_display_name.py  20260707_0001_embedding_dim_1536.py  20260709_0001_add_content_fts_gin_index.py  20260709_0002_embedding_dim_1024.py  20260709_0003_users_add_is_email_verified.py  96479eebe1bf_add_chat_and_cache_tables.py
src/backend/app/: __init__.py  cli.py  config.py  main.py
src/backend/app/core/: auth.py  logging.py  rate_limit.py  redis.py  state_machine.py
src/backend/app/db/: base.py  session.py
src/backend/app/llm/: __init__.py  cost_report.py  embeddings.py  errors.py  optimizer_adapter.py  providers.py  rerank.py  router.py
src/backend/app/models/: __init__.py  enums.py  tables.py
src/backend/app/schemas/: admin.py  auth.py  courses.py  documents.py  mindmap.py  mock_test.py  notifications.py  review.py  reviewers.py  tutor.py  vote.py
src/backend/app/services/: admin_service.py  course_service.py  document_service.py  document_summary_service.py  email.py  email_verification.py  evaluation_report_service.py  failure_hints.py  health.py  mindmap_service.py  mock_test_service.py  reindex_service.py  retrieval_service.py  review_service.py  seed.py  (+3 more)
src/backend/docker/: Dockerfile.api  Dockerfile.worker
src/backend/tests/: README.md  conftest.py
(+1880 files in other folders)
