[project]
name = "academic-kb-backend"
version = "0.1.0"
description = "FastAPI backend for the community academic knowledge platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "arq>=0.26.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.1.0",
  "boto3>=1.34.0",
  "fastapi>=0.111.0",
  "google-genai>=0.1.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "Pillow>=10.0.0",
  "pydantic-settings>=2.2.0",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.1",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "python-pptx>=1.0.2",
  "redis>=5.0.0",
  "resend>=2.0.0",
  "sentence-transformers>=3.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]
optimizer = [
  "llm-cost-optimizer[bedrock,compression,google,groq,semantic-cache] @ git+https://github.com/aiop-aickh-a20-ai-eval-observe/Cost-Optimized-Eval.git@main",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Form/File/Query as defaults is intentional

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = ["e2e: end-to-end tests requiring a running stack (deselect with -m 'not e2e')"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
